# automata

./: automata.cabal
src/Language/Automata/Finite/: Deterministic.hs  NonDeterministic.hs  Nondeterministic.hs  RegularExpression.hs
src/Language/Automata/Pushdown/: Deterministic.hs  NonDeterministic.hs  Nondeterministic.hs
src/Language/Grammar/: Regular.hs
