name:           automata
version:        0.0.0
cabal-version:  >= 1.14
license:        BSD3
license-file:   LICENSE.md
author:         Kyle Putnam <putnam.kyle@gmail.com>
maintainer:     Kyle Putnam <putnam.kyle@gmail.com>
homepage:       https://github.com/kputnam/automata
category:       Language
build-type:     Simple
synopsis:       Abstract machines
description:
  Abstract machines

library
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010

  build-depends:
    mtl >= 2.0.0,
    base >= 3 && <5,
    text >= 0.11.2.3,
    pretty >= 1.1.1.0,
    containers >= 0.4.2.0
    -- attoparsec >= 0.10.2.0

  exposed-modules:
    Language.Automata.Finite.Deterministic
    Language.Automata.Finite.Nondeterministic
    Language.Automata.Finite.RegularExpression
    Language.Automata.Pushdown.Deterministic
    Language.Automata.Pushdown.Nondeterministic

source-repository head
  type:     git
  location: https://github.com/kputnam/automata
